# Ralib-Game-Engine

./: CMakeLists.txt  main.cpp
src/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  IComponent.h  StateManager.cpp  StateManager.h
src/Components/: CircleRenderComponent.cpp  CircleRenderComponent.h  PositionComponent.cpp  PositionComponent.h  RenderComponent.h
src/States/: BaseState.h  IdleState.cpp  IdleState.h  JumpingState.cpp  JumpingState.h  WalkingState.cpp  WalkingState.h
